sculpt pose brush ignores fase set automasking #87596

Closed
opened 2021-04-18 10:15:06 +02:00 by Roman · 7 comments

System Information
Operating system: linux
Graphics card: intel

Blender Version
Broken: 2.93.0-9b87d3f02962-linux64

Short description of error
sculpt pose brush affects whole mesh, regardless of the face set automasking setting

Exact steps for others to reproduce the error
Based on the attached .blend file faceset-masking-bug.blend

Open attached blend file, check that sculpt pose brush is selected and face set automasking is turned on:
Screenshot_20210417_211246.jpeg

Bend the faceset-marked top mesh part with the pose brush:
pre-stroke.jpeg

Result: the bottom (white) part of the mesh also affected, despite the fact that it does not belong to face set:
post-stroke.jpeg

Expected result: bottom part vertices should stay in place. For example this is correct result of applying elastic deform brush to the top part:
elastic-correct.jpeg

Side note: the pose brush correctly avoids box mask, it should do the same for face set automasking, when it is on

**System Information** Operating system: linux Graphics card: intel **Blender Version** Broken: 2.93.0-9b87d3f02962-linux64 **Short description of error** sculpt pose brush affects whole mesh, regardless of the face set automasking setting **Exact steps for others to reproduce the error** Based on the attached .blend file [faceset-masking-bug.blend](https://archive.blender.org/developer/F9951711/faceset-masking-bug.blend) Open attached blend file, check that sculpt pose brush is selected and face set automasking is turned on: ![Screenshot_20210417_211246.jpeg](https://archive.blender.org/developer/F9951740/Screenshot_20210417_211246.jpeg) Bend the faceset-marked top mesh part with the pose brush: ![pre-stroke.jpeg](https://archive.blender.org/developer/F9951753/pre-stroke.jpeg) Result: the bottom (white) part of the mesh also affected, despite the fact that it does not belong to face set: ![post-stroke.jpeg](https://archive.blender.org/developer/F9951786/post-stroke.jpeg) Expected result: bottom part vertices should stay in place. For example this is correct result of applying elastic deform brush to the top part: ![elastic-correct.jpeg](https://archive.blender.org/developer/F9951794/elastic-correct.jpeg) Side note: the pose brush correctly avoids box mask, it should do the same for face set automasking, when it is on
Author

Added subscriber: @rwman

Added subscriber: @rwman
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by cc72dd7376

This issue was referenced by cc72dd73760ab41442e4ce7c81bea8697207d27d
shalinisdad commented 2021-04-19 07:24:59 +02:00 (Migrated from localhost:3001)

Added subscriber: @shalinisdad

Added subscriber: @shalinisdad
shalinisdad commented 2021-04-19 07:24:59 +02:00 (Migrated from localhost:3001)

This comment was removed by @shalinisdad

*This comment was removed by @shalinisdad*

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2021-04-27 21:39:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87596
No description provided.